--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>dynamic-tiles</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>war</packaging>
+
 <dependencies>
     <dependency>
         <groupId>javax.servlet</groupId>
@@ -30,26 +32,6 @@
         <artifactId>spring-test</artifactId>
         <version>3.2.17.RELEASE</version>
         <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tiles</groupId>
-        <artifactId>tiles-core</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tiles</groupId>
-        <artifactId>tiles-jsp</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tiles</groupId>
-        <artifactId>tiles-servlet</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.tiles</groupId>
-        <artifactId>tiles-template</artifactId>
-        <version>2.2.2</version>
     </dependency>
     <dependency>
         <groupId>junit</groupId>
