--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+    </dependency>
+    <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.21</version>
@@ -39,5 +44,6 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+
 </dependencies>
 </project>
